--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fatal: destination path 'SCAN' already exists and is not an empty directory.\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "!git clone https://github.com/brendenlake/SCAN.git\n",
     "%pip install -r requirements.txt --quiet"
@@ -12,30 +21,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mhojmax\u001b[0m (\u001b[33mrl-msps\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "from Dataloader import Dataloader, get_dataset_path"
+    "from Dataloader import Dataloader, get_dataset_path\n",
+    "from Seq2SeqTransformer import Seq2SeqTransformer, create_mask, generate_square_subsequent_mask\n",
+    "from torch.nn.utils.rnn import pad_sequence\n",
+    "from torch.utils.data import Dataset\n",
+    "from Lang import Lang\n",
+    "import torch\n",
+    "import wandb\n",
+    "import os\n",
+    "os.environ['WANDB_NOTEBOOK_NAME'] = 'transformer.ipynb'\n",
+    "wandb.login()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
     "    'learning_rate': 0.001,\n",
-    "    'teacher_forcing_ratio': 0.5,\n",
-    "    'trials': int(1e5),\n",
-    "    'gradient_clip_norm': 5,\n",
+    "    'dropout': 0.1,\n",
+    "    'hidden_size': 200,\n",
+    "    'num_encoder_layers': 2,\n",
+    "    'num_decoder_layers': 2,\n",
+    "    'nhead': 2,\n",
+    "    'epochs': 400,\n",
+    "    '_folder': 'SCAN/simple_split',\n",
+    "    'dataset': 'simple',\n",
+    "    'batch_size': 64,\n",
     "}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,11 +91,381 @@
     "config['input_size'] = dataloader.input_lang.n_words\n",
     "config['output_size'] = dataloader.output_lang.n_words"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mhojmax\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "wandb version 0.13.7 is available!  To upgrade, please run:\n",
+       " $ pip install wandb --upgrade"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Tracking run with wandb version 0.13.5"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Run data is saved locally in <code>/Users/axelhojmark/Desktop/Individual-ATNLP/wandb/run-20221216_163253-a4rlag3t</code>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "Syncing run <strong><a href=\"https://wandb.ai/hojmax/individual-atnlp/runs/a4rlag3t\" target=\"_blank\">Transformer, Dataset: simple</a></strong> to <a href=\"https://wandb.ai/hojmax/individual-atnlp\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": [
+       "<Dataloader.Dataloader at 0x7fb8ba474e50>"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "wandb.init(\n",
+    "    project=\"individual-atnlp\", \n",
+    "    entity=\"hojmax\",\n",
+    "    name=f\"Transformer, Dataset: {config['dataset']}\",\n",
+    "    config=config,\n",
+    "    tags=[\"test\"]\n",
+    ")\n",
+    "dataloader.save(wandb.run.dir)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "transformer = Seq2SeqTransformer(\n",
+    "    num_encoder_layers=config['num_encoder_layers'],\n",
+    "    num_decoder_layers=config['num_decoder_layers'],\n",
+    "    emb_size=config['hidden_size'],\n",
+    "    nhead=config['nhead'],\n",
+    "    src_vocab_size=config['input_size'],\n",
+    "    tgt_vocab_size=config['output_size'],\n",
+    "    dim_feedforward=config['hidden_size'],\n",
+    "    dropout=config['dropout']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss_fn = torch.nn.CrossEntropyLoss(ignore_index=Lang.PAD_token)\n",
+    "optimizer = torch.optim.Adam(\n",
+    "    transformer.parameters(),\n",
+    "    lr=config['learning_rate']\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_X = [e.flatten() for e in train_X]\n",
+    "train_Y = [e.flatten() for e in train_Y]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_inputs = pad_sequence(\n",
+    "    train_X,\n",
+    "    padding_value=Lang.PAD_token\n",
+    ")\n",
+    "train_targets = pad_sequence(\n",
+    "    train_Y,\n",
+    "    padding_value=Lang.PAD_token\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([50, 16728])"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_targets.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CustomTensorDataset(Dataset):\n",
+    "    def __init__(self, *tensors) -> None:\n",
+    "        self.tensors = tensors\n",
+    "\n",
+    "    def __getitem__(self, index):\n",
+    "        return tuple(tensor[:,index] for tensor in self.tensors)\n",
+    "\n",
+    "    def __len__(self):\n",
+    "        return self.tensors[0].size(0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = CustomTensorDataset(train_inputs, train_targets)\n",
+    "train_dataloader = torch.utils.data.DataLoader(\n",
+    "    train_dataset,\n",
+    "    batch_size=config['batch_size'],\n",
+    "    shuffle=True,\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_epoch(model, optimizer):\n",
+    "    model.train()\n",
+    "    losses = 0\n",
+    "\n",
+    "    for src, tgt in train_dataloader:\n",
+    "        # .T because dataloader is not returning the right shape\n",
+    "        src = src.T.to(device)\n",
+    "        tgt = tgt.T.to(device)\n",
+    "\n",
+    "        tgt_input = tgt[:-1, :]\n",
+    "\n",
+    "        src_mask, tgt_mask, src_padding_mask, tgt_padding_mask = create_mask(\n",
+    "            src,\n",
+    "            tgt_input\n",
+    "        )\n",
+    "\n",
+    "        logits = model(\n",
+    "            src,\n",
+    "            tgt_input,\n",
+    "            src_mask,\n",
+    "            tgt_mask,\n",
+    "            src_padding_mask,\n",
+    "            tgt_padding_mask,\n",
+    "            src_padding_mask\n",
+    "        )\n",
+    "\n",
+    "        optimizer.zero_grad()\n",
+    "\n",
+    "        tgt_out = tgt[1:, :]\n",
+    "        loss = loss_fn(\n",
+    "            logits.reshape(-1, logits.shape[-1]),\n",
+    "            tgt_out.reshape(-1)\n",
+    "        )\n",
+    "        loss.backward()\n",
+    "\n",
+    "        optimizer.step()\n",
+    "        losses += loss.item()\n",
+    "\n",
+    "        return losses / len(train_dataloader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for epoch in range(config['epochs']):\n",
+    "    loss = train_epoch(transformer, optimizer)\n",
+    "    wandb.log({\n",
+    "        \"avg_epoch_loss\": loss,\n",
+    "    })"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# function to generate output sequence using greedy algorithm\n",
+    "def greedy_decode(model, src, src_mask, max_len, start_symbol):\n",
+    "    src = src.to(device)\n",
+    "    src_mask = src_mask.to(device)\n",
+    "\n",
+    "    memory = model.encode(src, src_mask)\n",
+    "    ys = torch.ones(1, 1).fill_(start_symbol).type(torch.long).to(device)\n",
+    "    for i in range(max_len-1):\n",
+    "        memory = memory.to(device)\n",
+    "        tgt_mask = (generate_square_subsequent_mask(ys.size(0))\n",
+    "                    .type(torch.bool)).to(device)\n",
+    "        out = model.decode(ys, memory, tgt_mask)\n",
+    "        out = out.transpose(0, 1)\n",
+    "        prob = model.generator(out[:, -1])\n",
+    "        _, next_word = torch.max(prob, dim=1)\n",
+    "        next_word = next_word.item()\n",
+    "\n",
+    "        ys = torch.cat([ys,\n",
+    "                        torch.ones(1, 1).type_as(src.data).fill_(next_word)], dim=0)\n",
+    "        if next_word == Lang.EOS_token:\n",
+    "            break\n",
+    "    return ys"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 3, 4, 5, 6, 7, 8, 4, 5, 9, 1])"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_inputs[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 3, 3, 4, 3, 3, 4, 3, 3, 3, 3, 3, 3, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
+       "        2, 2])"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_targets[:,0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = train_inputs[:, 0].view(-1, 1)\n",
+    "num_tokens = src.shape[0]\n",
+    "src_mask = (torch.zeros(num_tokens, num_tokens)).type(torch.bool)\n",
+    "tgt_tokens = greedy_decode(\n",
+    "    transformer,\n",
+    "    src,\n",
+    "    src_mask,\n",
+    "    max_len=num_tokens + 5,\n",
+    "    start_symbol=Lang.SOS_token\n",
+    ").flatten()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tgt_tokens"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.11.0 64-bit",
+   "display_name": "Python 3.9.13 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -67,12 +479,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+    "hash": "59669bb1168edc622bb4dae0f982b2741a2a7b3cacb44a90a5e1c2622e59ac77"
    }
   }
  },
