--- a/main.ipynb
+++ b/main.ipynb
@@ -184,8 +184,8 @@
    "outputs": [],
    "source": [
     "wandb.init(\n",
-    "    project=\"Paper-Implemenation\",\n",
-    "    entity=\"project-group-1\",\n",
+    "    project=\"individual-atnlp\", \n",
+    "    entity=\"hojmax\",\n",
     "    name=f\"Model: {config['model']}, Dataset: {config['dataset']}\",\n",
     "    config=config,\n",
     "    tags=[\"test\"]\n",
@@ -352,7 +352,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('base')",
+   "display_name": "Python 3.11.0 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -366,12 +366,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.11.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "59669bb1168edc622bb4dae0f982b2741a2a7b3cacb44a90a5e1c2622e59ac77"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
