--- a/transformer.ipynb
+++ b/transformer.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "fatal: destination path 'SCAN' already exists and is not an empty directory.\n",
-      "Note: you may need to restart the kernel to use updated packages.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "!git clone https://github.com/brendenlake/SCAN.git\n",
     "%pip install -r requirements.txt --quiet"
@@ -21,32 +12,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mhojmax\u001b[0m (\u001b[33mrl-msps\u001b[0m). Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "True"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from Dataloader import Dataloader, get_dataset_path\n",
+    "from Dataloader import Dataloader\n",
     "from Seq2SeqTransformer import Seq2SeqTransformer, create_mask, generate_square_subsequent_mask\n",
     "from torch.nn.utils.rnn import pad_sequence\n",
-    "from torch.utils.data import Dataset\n",
+    "from torch.utils.data import TensorDataset\n",
     "from Lang import Lang\n",
     "import torch\n",
     "import wandb\n",
@@ -57,36 +30,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "config = {\n",
-    "    'learning_rate': 0.001,\n",
+    "    'learning_rate': 0.01,\n",
     "    'dropout': 0.1,\n",
     "    'hidden_size': 200,\n",
     "    'num_encoder_layers': 2,\n",
     "    'num_decoder_layers': 2,\n",
     "    'nhead': 2,\n",
-    "    'epochs': 400,\n",
-    "    '_folder': 'SCAN/simple_split',\n",
+    "    'epochs': 20,\n",
+    "    'train_path': 'SCAN/simple_split/tasks_train_simple.txt',\n",
+    "    'test_path': 'SCAN/simple_split/tasks_test_simple.txt',\n",
     "    'dataset': 'simple',\n",
     "    'batch_size': 64,\n",
-    "}"
+    "}\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "dataloader = Dataloader()\n",
     "\n",
-    "train_path = get_dataset_path(config['_folder'], config['dataset'], 'train')\n",
-    "train_X, train_Y = dataloader.fit_transform(train_path)\n",
-    "test_path = get_dataset_path(config['_folder'], config['dataset'], 'test')\n",
-    "test_X, test_Y = dataloader.transform(test_path)\n",
+    "train_X, train_Y = dataloader.fit_transform(config['train_path'])\n",
+    "test_X, test_Y = dataloader.transform(config['test_path'])\n",
     "\n",
     "config['input_size'] = dataloader.input_lang.n_words\n",
     "config['output_size'] = dataloader.output_lang.n_words"
@@ -94,76 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\u001b[34m\u001b[1mwandb\u001b[0m: Currently logged in as: \u001b[33mhojmax\u001b[0m. Use \u001b[1m`wandb login --relogin`\u001b[0m to force relogin\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "wandb version 0.13.7 is available!  To upgrade, please run:\n",
-       " $ pip install wandb --upgrade"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Tracking run with wandb version 0.13.5"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Run data is saved locally in <code>/Users/axelhojmark/Desktop/Individual-ATNLP/wandb/run-20221216_163253-a4rlag3t</code>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Syncing run <strong><a href=\"https://wandb.ai/hojmax/individual-atnlp/runs/a4rlag3t\" target=\"_blank\">Transformer, Dataset: simple</a></strong> to <a href=\"https://wandb.ai/hojmax/individual-atnlp\" target=\"_blank\">Weights & Biases</a> (<a href=\"https://wandb.me/run\" target=\"_blank\">docs</a>)<br/>"
-      ],
-      "text/plain": [
-       "<IPython.core.display.HTML object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<Dataloader.Dataloader at 0x7fb8ba474e50>"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "wandb.init(\n",
     "    project=\"individual-atnlp\", \n",
@@ -177,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -208,7 +113,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,64 +123,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "train_inputs = pad_sequence(\n",
     "    train_X,\n",
-    "    padding_value=Lang.PAD_token\n",
+    "    padding_value=Lang.PAD_token,\n",
+    "    batch_first=True\n",
     ")\n",
     "train_targets = pad_sequence(\n",
     "    train_Y,\n",
-    "    padding_value=Lang.PAD_token\n",
+    "    padding_value=Lang.PAD_token,\n",
+    "    batch_first=True\n",
     ")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "torch.Size([50, 16728])"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_targets.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class CustomTensorDataset(Dataset):\n",
-    "    def __init__(self, *tensors) -> None:\n",
-    "        self.tensors = tensors\n",
-    "\n",
-    "    def __getitem__(self, index):\n",
-    "        return tuple(tensor[:,index] for tensor in self.tensors)\n",
-    "\n",
-    "    def __len__(self):\n",
-    "        return self.tensors[0].size(0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "train_dataset = CustomTensorDataset(train_inputs, train_targets)\n",
+    "train_dataset = TensorDataset(train_inputs, train_targets)\n",
     "train_dataloader = torch.utils.data.DataLoader(\n",
     "    train_dataset,\n",
     "    batch_size=config['batch_size'],\n",
@@ -285,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -294,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +173,7 @@
     "    losses = 0\n",
     "\n",
     "    for src, tgt in train_dataloader:\n",
-    "        # .T because dataloader is not returning the right shape\n",
+    "        # .T because dataloader is returning batch_first\n",
     "        src = src.T.to(device)\n",
     "        tgt = tgt.T.to(device)\n",
     "\n",
@@ -336,12 +206,12 @@
     "        optimizer.step()\n",
     "        losses += loss.item()\n",
     "\n",
-    "        return losses / len(train_dataloader)"
+    "    return losses / len(train_dataloader)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,12 +219,13 @@
     "    loss = train_epoch(transformer, optimizer)\n",
     "    wandb.log({\n",
     "        \"avg_epoch_loss\": loss,\n",
+    "        \"epoch\": epoch + 1\n",
     "    })"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -384,53 +255,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 3, 4, 5, 6, 7, 8, 4, 5, 9, 1])"
-      ]
-     },
-     "execution_count": 17,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_inputs[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 3, 3, 4, 3, 3, 4, 3, 3, 3, 3, 3, 3, 1, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "        2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2,\n",
-       "        2, 2])"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "train_targets[:,0]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "src = train_inputs[:, 0].view(-1, 1)\n",
+    "train_inputs[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_targets[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "src = train_inputs[0].view(-1, 1)\n",
     "num_tokens = src.shape[0]\n",
     "src_mask = (torch.zeros(num_tokens, num_tokens)).type(torch.bool)\n",
     "tgt_tokens = greedy_decode(\n",
@@ -444,20 +291,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "tensor([0, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3, 3])"
-      ]
-     },
-     "execution_count": 20,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "tgt_tokens"
    ]
