🔧 Moved files to /Seq2seq

--- a/main.ipynb
+++ b/main.ipynb
@@ -31,11 +31,11 @@
     "import torch\n",
     "from torch.nn import NLLLoss\n",
     "from torch.optim import Adam\n",
-    "from Dataloader import Dataloader, get_dataset_path\n",
-    "from Encoder import EncoderRNN\n",
-    "from Decoder import DecoderRNN\n",
-    "from Evaluate import get_accuracy, get_accuracy_across_length\n",
-    "from Train import train\n",
+    "from Seq2seq.Dataloader import Dataloader, get_dataset_path\n",
+    "from Seq2seq.Encoder import EncoderRNN\n",
+    "from Seq2seq.Decoder import DecoderRNN\n",
+    "from Seq2seq.Evaluate import get_accuracy, get_accuracy_across_length\n",
+    "from Seq2seq.Train import train\n",
     "import os\n",
     "device = \"cuda:0\" if torch.cuda.is_available() else \"cpu\"\n",
     "os.environ['WANDB_NOTEBOOK_NAME'] = 'main.ipynb'\n",
